# ncmpy

./: .gitignore  pyproject.toml
libncmdump/src/: lib.rs
ncmpy/: main.py
ncmpy/gui/: droplistwidget.py  mainwindow.py  mainwindow.ui  ui_mainwindow.py
ncmpy/ncmdump/: app.py  core.py
ncmpy/unlocker/: unlockrunner.py
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
src/ncmpy/: client.py  config.py  libncmdump.pyi  main.py
src/ncmpy/gui/: droplistwidget.py  mainwindow.py  mainwindow.ui  ui_mainwindow.py
src/ncmpy/ncmdump/: __init__.py  app.py
src/ncmpy/unlocker/: unlocker.py  unlockrunner.py
