[tool.poetry]
name = "ncmpy"
version = "0.1.0"
description = ""
authors = ["Young <gooker_young@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
PySide2 = "~5.14"
qt-material = "^2.14"
pycryptodome = "^3.20.0"
mutagen = "^1.47.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'tuna'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple/'
priority = "default"

[[tool.poetry.source]]
name = 'aliyun'
url = 'https://mirrors.aliyun.com/pypi/'
priority = "supplemental"