[tool.poetry]
name = "ncmpy"
version = "0.1.0"
description = ""
authors = ["Young <gooker_young@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
PySide2 = "~5.14"
qt-material = "^2.14"
pycryptodome = "^3.20.0"
mutagen = "^1.47.0"
black = "^24.2.0"
maturin = "^1.4.0"
libncmdump = { path = "./libncmdump/target/wheels/libncmdump-0.1.0-cp38-none-win_amd64.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'tuna'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple/'
priority = "default"

[[tool.poetry.source]]
name = 'aliyun'
url = 'https://mirrors.aliyun.com/pypi/'
priority = "supplemental"